Fixed vertical alignment for button icons.

--- a/themes/portfolio/source/css/style.sass
+++ b/themes/portfolio/source/css/style.sass
@@ -53,5 +53,9 @@
 .resume-canvas
   width: 100%
 
+.btn, button
+  .fas
+    vertical-align: middle
+
 html.sr .reveal
   visibility: hidden
